# pitcher-ai

./: .gitignore  PATCH_NOTES.md  README.md  pyproject.toml
reports/: findings.md  index.html
scripts/: build_features.py  trim_clips.py
src/pitcher_ai/: __init__.py  cli.py  config.py  features.py  features.py.bak  pitch_types.py  pose_extract.py  statcast.py  train_baseline.py  train_pose_model.py  util.py  video_fetch.py  video_manifest.py  visualize.py
