[project]
name = "pitcher-ai"
version = "0.1.0"
description = "Pitch prediction research pipeline using Statcast metadata first, then pre-release video features."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "duckdb>=1.1.0",
    "joblib>=1.4.2",
    "matplotlib>=3.9.0",
    "mediapipe>=0.10.35",
    "numpy>=1.26.4",
    "pandas>=2.2.2",
    "polars>=1.0.0",
    "pyarrow>=16.1.0",
    "pybaseball>=2.2.7",
    "rich>=13.7.1",
    "scikit-learn>=1.5.0",
    "typer>=0.12.3",
]

[project.scripts]
pitcher-ai = "pitcher_ai.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pitcher_ai"]

[tool.ruff]
line-length = 100

[dependency-groups]
dev = [
    "ruff>=0.5.0",
]
